data/derived/comb/progs/unify/prog1427.ml.out
Characters 120-121:
  let base =  if t=sep then sep else h in
                                     ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
